mywork/force-app/main/default/objects/Unit_Test_Failure__c/Unit_Test_Failure__c.object-meta.xml
<CustomObject>
    <description>Represents failed unit test methods from a test run</description>
    <label>Unit Test Failure</label>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>Failed Unit Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Test Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>