mywork/force-app/main/default/objects/Unit_Test_Failure__c/fields/Apex_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Log_Id__c</fullName>
    <externalId>true</externalId>
    <label>Apex Log Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>