mywork/force-app/main/default/objects/Unit_Test_Failure__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>The class that this method is a member of</description>
    <inlineHelpText>The class that this method is a member of</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>