mywork/force-app/main/default/objects/Unit_Test_Failure__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The error message from the test failure</description>
    <inlineHelpText>The error message from the test failure</inlineHelpText>
    <label>Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>