mywork/force-app/main/default/objects/Unit_Test_Failure__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>The name of the test method that failed</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>