mywork/force-app/main/default/objects/Unit_Test_Failure__c/fields/Unit_Test_Summary__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Summary__c</fullName>
    <description>The summary record that this test error result is a part of.</description>
    <label>Unit Test Summary</label>
    <referenceTo>Unit_Test_Summary__c</referenceTo>
    <relationshipLabel>Unit Test Failures</relationshipLabel>
    <relationshipName>Unit_Test_Failures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>